[gd_scene load_steps=25 format=2]

[ext_resource path="res://Events/Item.gd" type="Script" id=1]
[ext_resource path="res://UI/Shapes/question.png" type="Texture" id=2]
[ext_resource path="res://Modifiers/runeback.png" type="Texture" id=3]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=4]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/Shapes/squareshadow.png" type="Texture" id=6]
[ext_resource path="res://Modifiers/mod_Burn.png" type="Texture" id=7]
[ext_resource path="res://Bag/UI Elements/gold1.png" type="Texture" id=8]
[ext_resource path="res://Bag/UI Elements/gold3.png" type="Texture" id=9]
[ext_resource path="res://Bag/UI Elements/gold2.png" type="Texture" id=10]
[ext_resource path="res://UI/Gear/weaponIcon.png" type="Texture" id=11]
[ext_resource path="res://UI/Gear/scrollIcon_Scroll of Sight.png" type="Texture" id=12]
[ext_resource path="res://Card/CardSprites/card_Attack.png" type="Texture" id=13]
[ext_resource path="res://Card/CardSprites/cardCost.png" type="Texture" id=14]
[ext_resource path="res://Card/CardSprites/cardShadow.png" type="Texture" id=15]
[ext_resource path="res://Map/whitesquare.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 31
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 61, 34 )

[sub_resource type="DynamicFont" id=8]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
position = Vector2( 184, -16 )
script = ExtResource( 1 )

[node name="things" type="Node2D" parent="."]
position = Vector2( 108, 43 )

[node name="card" type="Node2D" parent="things"]
visible = false
position = Vector2( -34, 463 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="things/card"]
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( -1, 2 )
scale = Vector2( 0.251333, 0.233333 )
texture = ExtResource( 15 )

[node name="cardSprite" type="Sprite" parent="things/card"]
modulate = Color( 0.909804, 0.909804, 0.909804, 1 )
scale = Vector2( 0.199833, 0.199833 )
texture = ExtResource( 13 )

[node name="cardCost" type="Sprite" parent="things/card"]
modulate = Color( 0.105882, 0.105882, 0.105882, 0.380392 )
position = Vector2( 0.468687, 81 )
scale = Vector2( 0.20125, 0.199833 )
texture = ExtResource( 14 )

[node name="nameBack" type="Sprite" parent="things/card"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( -0.500003, -80 )
scale = Vector2( 0.139, 0.0384583 )
texture = ExtResource( 16 )

[node name="costBack" type="Sprite" parent="things/card"]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( -7.62939e-06, 81 )
scale = Vector2( 0.138, 0.0384583 )
texture = ExtResource( 16 )

[node name="nameText" type="Label" parent="things/card"]
margin_left = -70.0
margin_top = -100.0
margin_right = 69.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descriptionText" type="Label" parent="things/card"]
margin_left = -67.0
margin_top = -38.0
margin_right = 67.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
text = "Description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="costText" type="Label" parent="things/card"]
margin_left = -69.0
margin_top = 61.0
margin_right = 69.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Cost"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="Node2D" parent="things"]
visible = false
position = Vector2( 35, 504 )
__meta__ = {
"_edit_group_": true
}

[node name="scroll" type="Sprite" parent="things/scroll"]
position = Vector2( -50, -45.0001 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="things/scroll"]
margin_left = -151.0
margin_top = -120.0
margin_right = 50.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.247059, 0.156863, 0.0588235, 1 )
text = "Scroll of Teleportation"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gear" type="Node2D" parent="things"]
position = Vector2( -186, 485 )
__meta__ = {
"_edit_group_": true
}

[node name="gearType" type="Sprite" parent="things/gear"]
position = Vector2( -50, -45.0001 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="things/gear"]
margin_left = -145.0
margin_top = -80.0
margin_right = 45.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 4 )
text = "Gear"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold" type="Node2D" parent="things"]
position = Vector2( -466, 414 )
__meta__ = {
"_edit_group_": true
}

[node name="gold1" type="Sprite" parent="things/gold"]
position = Vector2( 0.25, -0.749985 )
scale = Vector2( 0.189, 0.189 )
texture = ExtResource( 8 )

[node name="gold2" type="Sprite" parent="things/gold"]
visible = false
position = Vector2( 0, -2 )
scale = Vector2( 0.198, 0.198 )
texture = ExtResource( 10 )
offset = Vector2( -5.05048, 50.5049 )

[node name="gold3" type="Sprite" parent="things/gold"]
visible = false
position = Vector2( -1, -1 )
scale = Vector2( 0.233545, 0.233545 )
texture = ExtResource( 9 )
offset = Vector2( 0, -4.28174 )

[node name="amount" type="Label" parent="things/gold"]
margin_left = -42.75
margin_top = -27.75
margin_right = 44.25
margin_bottom = 23.25
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.435294, 0.376471, 0.117647, 1 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rune1" type="Node2D" parent="things"]
position = Vector2( -472, 497 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="things/rune1"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -46.0
margin_top = -48.0
margin_right = 419.0
margin_bottom = 427.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="runeback" type="Sprite" parent="things/rune1"]
position = Vector2( 0.999969, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="runesprite" type="Sprite" parent="things/rune1"]
position = Vector2( 0.999969, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="rune2" type="Node2D" parent="things"]
position = Vector2( -389, 476 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="things/rune2"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -47.0
margin_top = -49.0
margin_right = 428.0
margin_bottom = 436.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="runeback" type="Sprite" parent="things/rune2"]
position = Vector2( 0.999985, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="runesprite" type="Sprite" parent="things/rune2"]
position = Vector2( 0.999985, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="rune3" type="Node2D" parent="things"]
position = Vector2( -549, 441 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="things/rune3"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -47.0001
margin_top = -49.0
margin_right = 423.0
margin_bottom = 431.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="runeback" type="Sprite" parent="things/rune3"]
position = Vector2( 1, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="runesprite" type="Sprite" parent="things/rune3"]
position = Vector2( 1, -1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="add" type="Node2D" parent="."]
position = Vector2( 310, 872 )
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="add"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -48.0
margin_top = -45.0
margin_right = 622.0
margin_bottom = 375.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="add"]
margin_left = -36.0
margin_top = -33.0
margin_right = 334.0
margin_bottom = 165.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
patch_margin_left = 100
patch_margin_top = 99
patch_margin_right = 100
patch_margin_bottom = 99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="add"]
margin_left = -57.0
margin_top = -32.0
margin_right = 89.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonAdd" type="TextureButton" parent="add"]
margin_left = -42.0
margin_top = -37.0
margin_right = 80.0
margin_bottom = 31.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="add"]
visible = false
modulate = Color( 0.760784, 0.694118, 0.556863, 0.235294 )
margin_left = -48.0
margin_top = -46.0
margin_right = 1292.0
margin_bottom = 814.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moveAreaAdd" type="Area2D" parent="add"]
visible = false
collision_mask = 0

[node name="moveCollision" type="CollisionShape2D" parent="add/moveAreaAdd"]
position = Vector2( 19, -3 )
shape = SubResource( 7 )

[node name="what" type="Node2D" parent="."]
position = Vector2( 319, 670 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="what"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -198.0
margin_top = -54.0
margin_right = 1917.0
margin_bottom = 446.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="what"]
modulate = Color( 0.654902, 0.611765, 0.556863, 1 )
margin_left = -187.0
margin_top = -42.0
margin_right = 868.0
margin_bottom = 160.0
rect_scale = Vector2( 0.38, 0.38 )
texture = ExtResource( 2 )
patch_margin_left = 105
patch_margin_top = 99
patch_margin_right = 100
patch_margin_bottom = 103
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="what"]
margin_left = -184.0
margin_top = -36.0
margin_right = 212.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 0.843137 )
text = "You found some things"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="add/buttonAdd" to="." method="_on_buttonAdd_pressed"]
[connection signal="area_entered" from="add/moveAreaAdd" to="." method="_on_moveAreaAdd_area_entered"]
[connection signal="area_exited" from="add/moveAreaAdd" to="." method="_on_moveAreaAdd_area_exited"]
